--- a/src/views/agreement/template.html
+++ b/src/views/agreement/template.html
@@ -85,6 +85,8 @@
 					<li style="line-height:18.0pt;margin-bottom:16.0pt;" ><span>This Agreement may only be amended or modified by a written instrument executed by both the Borrower and the Lender.</span><br>
 					</li>
 				</ul>
+				<div style="page-break-before: always;"></div>
+				<div style="margin-top: 100px"></div>
 				<li class="lh" style="line-height:18.0pt;text-align:left;margin-bottom:16.0pt;"><strong><u><span>Severability</span></u></strong><strong><u><br></u></strong>
 				</li>
 				<ul>
@@ -104,7 +106,6 @@
 					</li>
 				</ul>
 			</ol>
-			<div style="page-break-before: always;">
 				</p>
 				<table style="margin-right:auto;width:100%;">
 					<colgroup>
